--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>My portfolio</h1>
-    <a href="projects/bhromaon/index.html"><img src="img/bhromaon.png" alt="bhromaon"></a>
+    <a href="MyPortfolio/projects/bhromaon/index.html"><img src="img/bhromaon.png" alt="bhromaon"></a>
 </body>
 </html>
