--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <h1>My portfolio</h1>
     <a href="/MyPortfolio/projects/bhromaon/index.html"><img src="img/bhromaon.png" alt="bhromaon"></a>
     <a href="/MyPortfolio/projects/monticello/index.html"><img src="img/monticello.png" alt="monticello"></a>
+    <a href="/MyPortfolio/projects/rianna/index.html"><img src="img/rianna.png" alt="rianna"></a>
+    <a href="/MyPortfolio/projects/portfolio/index.html"><img src="img/portfolio.png" alt="portfolio"></a>
+    <a href="/MyPortfolio/projects/bt/index.html"><img src="img/bt.png" alt="bt"></a>
+    <a href="/MyPortfolio/projects/cachee/index.html"><img src="img/cachee.png" alt="cachee"></a>
 </body>
 </html>
