--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="/MyPortfolio/projects/children/index.html"><img src="img/children.png" alt="children"></a>
             <a href="/MyPortfolio/projects/glassshop/index.html"><img src="img/glassshop.png" alt="glassshop"></a>
             <a href="/MyPortfolio/projects/prechu/index.html"><img src="img/prechu.png" alt="prechu"></a>
+            <a href="/MyPortfolio/projects/finance-react/index.html"><img src="img/prechu.png" alt="prechu"></a>
         </div>
     </div>
 </body>
